2005-12-21  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* gsearchtool-support.c (get_readable_date): use g_date_set_time_t and
	include glib/gdate.h (patch by Kjartan Maraas, closes bug #324552).

2005-12-20  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gnome-search-tool.schemas.in:  Add new keys.
	* gsearchtool-callbacks.c: (store_window_state_and_geometry),
	(quit_application), (die_cb), (quit_cb), (click_close_cb),
	(columns_changed_cb), (window_state_event_cb):
	* gsearchtool-callbacks.h:  Add window_state_event_cb().
	* gsearchtool-support.c: (gsearchtool_gconf_set_int),
	(gsearchtool_set_columns_order),
	(gsearchtool_get_stored_window_geometry):
	* gsearchtool-support.h:  Add gsearchtool_gconf_set_int() 
	and gsearchtool_get_stored_window_geometry().
	* gsearchtool.c: (gsearch_window_size_allocate),
	(gsearch_app_create), (main):  Restore window size and state.
	* gsearchtool.h:  Add window width, height, and state.
	
	Fix bug #324097, save window size and state.  
	Thanks to Emmanuele Bassi for the initial patch.
	
2005-12-02  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c: (save_results_cb):  Make this
	function more robust, i.e. handle rows being removed.

2005-12-02  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c: (file_changed_cb), (move_to_trash_cb):
	* gsearchtool-callbacks.h:
	* gsearchtool.c: (tree_model_iter_free_monitor),
	(add_file_to_search_results), (spawn_search_command),
	(create_search_results_section):
	* gsearchtool.h: Monitor files in the result list.  Update the list
	when a file is removed.  Fixes bug 322763, "gnome-search-tool does
	not monitor fiels for removal".  Based on patch provided by Vincent 
	Noel.

2005-11-26  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool.c: (handle_search_command_stdout_io):
	Fix bug 322529.  If the selected folder is hidden then
	show hidden files.
	
2005-11-05  Dennis Cranston  <dennis_cranston@yahoo.com>
